fix: Update code